RESOLVED FIXED244549
Test addition (243907@main): [ iOS ][ macOS ] imported/w3c/web-platform-tests/html/semantics/scripting-1/the-script-element/module/dynamic-import/blob-url-workers.window.html is a flaky failure
https://bugs.webkit.org/show_bug.cgi?id=244549
Summary Test addition (243907@main): [ iOS ][ macOS ] imported/w3c/web-platform-tests...
Karl Rackler
Reported 2022-08-30 11:33:26 PDT
Description: imported/w3c/web-platform-tests/html/semantics/scripting-1/the-script-element/module/dynamic-import/blob-url-workers.window.html This test was added at 243907@main and has been a flaky failure since on both iOS and macOS. REPRODUCTION STEPS I can reproduce this on 253947@main ToT. Command: MacOS run-webkit-tests --debug -1 --exit-after-n-failures 1 --exit-after-n-crashes-or-timeouts 1 --iterations 50 -f --no-retry imported/w3c/web-platform-tests/html/semantics/scripting-1/the-script-element/module/dynamic-import/blob-url-workers.window.html iOS run-webkit-tests --ios-simulator --exit-after-n-failures 1 --exit-after-n-crashes-or-timeouts 1 --iterations 50 --no-retry imported/w3c/web-platform-tests/html/semantics/scripting-1/the-script-element/module/dynamic-import/blob-url-workers.window.html Result: Unexpected flakiness: text-only failures (1) imported/w3c/web-platform-tests/html/semantics/scripting-1/the-script-element/module/dynamic-import/blob-url-workers.window.html [ Failure Pass ] History: https://results.webkit.org/?suite=layout-tests&test=imported%2Fw3c%2Fweb-platform-tests%2Fhtml%2Fsemantics%2Fscripting-1%2Fthe-script-element%2Fmodule%2Fdynamic-import%2Fblob-url-workers.window.html&platform=mac&platform=ios&limit=50000&recent=false Diff: --- /Volumes/Data/worker/Apple-Monterey-Debug-WK2-Tests/build/layout-test-results/imported/w3c/web-platform-tests/html/semantics/scripting-1/the-script-element/module/dynamic-import/blob-url-workers.window-expected.txt +++ /Volumes/Data/worker/Apple-Monterey-Debug-WK2-Tests/build/layout-test-results/imported/w3c/web-platform-tests/html/semantics/scripting-1/the-script-element/module/dynamic-import/blob-url-workers.window-actual.txt @@ -1,5 +1,7 @@ -PASS A blob URL created in a window agent can be imported from a worker +Harness Error (TIMEOUT), message = null + +TIMEOUT A blob URL created in a window agent can be imported from a worker Test timed out PASS A blob URL revoked in a window agent will not resolve in a worker PASS A revoked blob URL will not resolve in a worker even if it's in the window's module graph
Attachments
Radar WebKit Bug Importer
Comment 1 2022-08-30 11:33:50 PDT
Karl Rackler
Comment 2 2022-08-30 11:43:41 PDT
I have marked this test as a flaky failure while this issue is investigated.
EWS
Comment 3 2022-08-30 11:51:46 PDT
Test gardening commit 253954@main (b81ed8d9b4a0): <https://commits.webkit.org/253954@main> Reviewed commits have been landed. Closing PR #3818 and removing active labels.
Chris Dumez
Comment 4 2022-11-08 15:32:25 PST
EWS
Comment 5 2022-11-09 12:30:38 PST
Committed 256496@main (6a2efe71cf30): <https://commits.webkit.org/256496@main> Reviewed commits have been landed. Closing PR #6274 and removing active labels.
youenn fablet
Comment 6 2023-01-01 23:45:21 PST
*** Bug 240062 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.