Source/WebCore/workers/DedicatedWorkerGlobalScope.cpp
@@ -105,13 +105,6 @@ ExceptionOr<void> DedicatedWorkerGlobalScope::postMessage(JSC::JSGlobalObject& s
     return { };
 }
 
-ExceptionOr<void> DedicatedWorkerGlobalScope::importScripts(const FixedVector<String>& urls)
-{
-    auto result = Base::importScripts(urls);
-    thread().workerObjectProxy().reportPendingActivity(hasPendingActivity());
-    return result;
-}
-
 DedicatedWorkerThread& DedicatedWorkerGlobalScope::thread()
 {
     return static_cast<DedicatedWorkerThread&>(Base::thread());
